# cookiecutter-pythonic-project

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  Pipfile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: doc.yml  main.yml
changelog/: index.html
docs/: changelog.md  index.md  usage.md
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
search/: search_index.json
tests/: conftest.py  test_bake.py  test_cookie.py  test_generation.py
usage/: index.html
{{ cookiecutter.project_slug }}/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: main.yaml  main.yml
{{ cookiecutter.project_slug }}/docs/: development.md
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/: __init__.py  cmdline.py  log.py
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/config/: __init__.py  settings.yml
{{ cookiecutter.project_slug }}/tests/: __init__.py  conftest.py  test_cmdline.py  test_log.py  test_version.py
