[tool.poetry]
name = "cookiecutter-pythonic-project"
version = "0.4.0"
description = "cookiecutter for pythonic project"
authors = ["huagang"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cookiecutter = "^2.1.1"
sh = "^1.14.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cookies = "^0.6.1"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
