[tool.poetry]
name = "cookiecutter-pythonic-project"
version = "0.5.0"
description = "cookiecutter for pythonic project"
authors = ["huagang <huagang517@126.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cookiecutter = "^2.1.1"
sh = "^1.14.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cookies = "^0.6.1"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
tox = "^4.5.2"
pre-commit = "^3.3.2"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
