[metadata]
name = cookiecutter_pythonic_peoject
version = 0.2.0
author = huagang
author_email = huagang517@126.com
description = A cookiecutter simple template for pythonic project.
keywords = ['cookiecutter', 'template', 'pythonic']
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
