[metadata]
name = cookiecutter_pythonic_peoject
version = 0.3.0
author = huagang
author_email = huagang517@126.com
description = A cookiecutter simple template for pythonic project.
keywords = ['cookiecutter', 'template', 'pythonic']
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests

[tool:pytest]
addopts = -nauto
testpaths = tests
python_files = tests.py test_*.py *_tests.py
