[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.project_description }}
keywords = {{ cookiecutter.project_name }}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: {{ cookiecutter.python_version }}

[options]
python_requires > = {{ cookiecutter.python_version }}
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    dynaconf
    click

[options.packages.find]
where = src
exclude =
    tests*
    docs

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cmdline:main

# Packaging project data in module {{ cookiecutter.project_slug }}.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]
{{ cookiecutter.project_slug }}.config =
    settings.yaml

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]
etc/{{ cookiecutter.project_slug }} =
    src/{{ cookiecutter.project_slug }}/config/settings.yaml

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py