[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.project_description }}
keywords = {{ cookiecutter.project_name }}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: {{ cookiecutter.python_version }}

[options]
python_requires > = {{ cookiecutter.python_version }}
include_package_data = True
packages = find:
{%- if cookiecutter.use_src_layout|lower == 'y' %}
package_dir =
    = src
{%- endif %}
install_requires =
    {%- if cookiecutter.init_skeleton == 'y' %}
    dynaconf
    click
    {%- endif %}

[options.packages.find]
{%- if cookiecutter.use_src_layout|lower == 'y' %}
where = src
{%- endif %}
exclude =
    tests*
    docs

# https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
[options.entry_points]
{%- if cookiecutter.init_skeleton|lower  == 'y' %}
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cmdline:main
{%- endif %}

# Packaging project data in module {{ cookiecutter.project_slug }}.
# https://setuptools.readthedocs.io/en/latest/userguide/datafiles.html?highlight=package_data
[options.package_data]
{%- if cookiecutter.init_skeleton|lower == 'y' %}
{{ cookiecutter.project_slug }}.config =
    settings.yml
{%- endif %}

# Copy data for user from project when pip install.
# The relative path is prefix `sys.prefix` . eg: `/usr/local/`.
# Path and data will remove When pip uninstall.
# https://docs.python.org/3/distutils/setupscript.html#installing-additional-files
[options.data_files]
{%- if cookiecutter.init_skeleton == 'y' %}
etc/{{ cookiecutter.project_slug }} =
    {% if cookiecutter.use_src_layout|lower == 'y' -%}
    src/
    {%- endif -%}
    {{ cookiecutter.project_slug }}/config/settings.yml
{%- endif %}

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py